feat(apps): implement http only cookie and wire endpoints to the frontend
